fix(argo-events): missing argument for toYaml function in deployment template
Signed-off-by: Shawqi <74347460+shaw8ii@users.noreply.github.com>

--- a/charts/argo-events/templates/argo-events-controller/deployment.yaml
+++ b/charts/argo-events/templates/argo-events-controller/deployment.yaml
@@ -60,7 +60,7 @@ spec:
         {{- end }}
         {{- with .Values.controller.envFrom }}
         envFrom:
-          {{- toYaml | nindent 8 }}
+          {{- toYaml . | nindent 8 }}
         {{- end }}
         volumeMounts:
         - name: config
