Add description to Chart.yaml
Signed-off-by: Shawqi <74347460+shaw8ii@users.noreply.github.com>

--- a/charts/argo-events/Chart.yaml
+++ b/charts/argo-events/Chart.yaml
@@ -15,5 +15,6 @@ maintainers:
     url: https://argoproj.github.io/
 annotations:
   artifacthub.io/changes: |
-    - kind: added
-      description: Add install guide on README
+    - kind: fixed
+      description: fix toYaml function in deployment template for envFrom block
+      
