--- a/charts/argo-workflows/Chart.yaml
+++ b/charts/argo-workflows/Chart.yaml
@@ -1,9 +1,9 @@
 apiVersion: v2
-appVersion: v3.4.5
+appVersion: v3.4.6
 name: argo-workflows
 description: A Helm chart for Argo Workflows
 type: application
-version: 0.22.15
+version: 0.22.16
 icon: https://raw.githubusercontent.com/argoproj/argo-workflows/master/docs/assets/argo.png
 home: https://github.com/argoproj/argo-helm
 sources:
@@ -13,5 +13,5 @@ maintainers:
     url: https://argoproj.github.io/
 annotations:
   artifacthub.io/changes: |
-    - kind: added
-      description: Ability to use memoization feature.
+    - kind: changed
+      description: Upgrade Argo Workflows to v3.4.6.
