--- a/charts/argo-workflows/Chart.yaml
+++ b/charts/argo-workflows/Chart.yaml
@@ -3,7 +3,7 @@ appVersion: v3.4.6
 name: argo-workflows
 description: A Helm chart for Argo Workflows
 type: application
-version: 0.23.0
+version: 0.23.1
 icon: https://raw.githubusercontent.com/argoproj/argo-workflows/master/docs/assets/argo.png
 home: https://github.com/argoproj/argo-helm
 sources:
@@ -13,5 +13,5 @@ maintainers:
     url: https://argoproj.github.io/
 annotations:
   artifacthub.io/changes: |
-    - kind: added
-      description: Added the ability to deploy init containers alongside the controller and server deployments.
+    - kind: fixed
+      description: Update outdated content on README.
