chore(argo-cd): update changelog
Signed-off-by: Jakub Oskera <iam@jakuboskera.dev>

--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -24,4 +24,4 @@ dependencies:
 annotations:
   artifacthub.io/changes: |
     - kind: fixed
-      description: Surround with if hostNetwork field to disable it when is set to false
+      description: Add namespace field for namespace scoped resources
