add lifesycle webhook to repo server
Signed-off-by: goshado <goshatoo@gmail.com>

--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -24,4 +24,4 @@ dependencies:
 annotations:
   artifacthub.io/changes: |
     - kind: added
-      description: Add log format and log level to dex.
+      description: Add lifesycle webhook to repo server.
